--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,38 @@
-body{
-    background-color: red;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+$text-color-primary: #212121;
+$text-color-secondary: #747474;
+$accent-color: #2D76F9;
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 1rem;
+    scroll-behavior: smooth;
+}
+
+html {
+    scroll-behavior: smooth
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    line-height: 1.8;
+    color: $text-color-primary;
+}
+
+a {
+    text-decoration: none;
+    color: $text-color-primary;
+}
+
+section,
+footer {
+    max-width: 1600px;
+    margin: 0 auto;
 }
