--- a/styles/main.css
+++ b/styles/main.css
@@ -31,3 +31,24 @@ footer {
   max-width: 1600px;
   margin: 0 auto;
 }
+
+.heading-1 {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.6;
+}
+@media (min-width: 1024px) {
+  .heading-1 {
+    font-size: 36px;
+  }
+}
+
+.heading-2 {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.6;
+}
+
+.text-light {
+  color: #747474;
+}
