--- a/styles/main.scss
+++ b/styles/main.scss
@@ -73,3 +73,55 @@ footer {
 .text-light {
     color: $text-color-secondary;
 }
+
+.btn {
+    min-width: 250px;
+    height: 75px;
+    padding: 0 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $accent-color;
+    color: white;
+    border: 1px solid $accent-color;
+    border-radius: 100px;
+    cursor: pointer;
+
+    &__text {
+        font-family: 'Poppins', sans-serif;
+        font-size: 18px;
+        font-weight: 500;
+    }
+
+    &:hover {
+        filter: brightness(1.2);
+    }
+}
+
+.btn-sm {
+    min-width: 175px;
+    height: 50px;
+    padding: 0 25px;
+    cursor: pointer;
+
+    &__text {
+        font-size: 16px;
+    }
+}
+
+.btn-outline-blue {
+    @include btn-outline(#fff, $accent-color);
+}
+
+.btn-outline-white {
+    @include btn-outline($accent-color, #fff);
+}
+
+.btn-white {
+    background-color: #fff;
+    color: $accent-color;
+
+    &:hover {
+        filter: brightness(0.9);
+    }
+}
