--- a/styles/main.scss
+++ b/styles/main.scss
@@ -117,6 +117,122 @@ footer {
     @include btn-outline($accent-color, #fff);
 }
 
+.nav {
+    position: absolute;
+    width: 100%;
+    max-width: 1600px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 0 clamp(24px, 100px, 10%);
+
+    &__left,
+    &__right {
+        display: flex;
+        align-items: center;
+    }
+
+    &__logo {
+        display: flex;
+        align-items: center;
+        margin-right: 85px;
+
+        img {
+            transform: scale(1.2);
+            transform-origin: left;
+        }
+    }
+
+    &__list {
+        @include reset-list();
+        position: absolute;
+        top: 60px;
+        right: clamp(24px, 100px, 10%);
+        display: flex;
+        flex-direction: column;
+        border: 1px solid $text-color-primary;
+        width: 50%;
+        min-width: 200px;
+        min-height: 200px;
+        height: 50vh;
+        background-color: white;
+        padding: 16px 32px;
+        border-radius: 8px;
+        gap: 8px;
+        box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+        display: none;
+
+        @media (min-width:1024px) {
+            position: relative;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            width: auto;
+            min-width: auto;
+            min-height: auto;
+            top: auto;
+            right: auto;
+            height: auto;
+            border: none;
+            box-shadow: none;
+            padding: 0;
+            gap: 50px;
+        }
+    }
+
+    &__link {
+        font-size: 18px;
+        font-weight: 400;
+
+        &:hover {
+            color: $accent-color;
+        }
+    }
+
+    &__toggler {
+        width: 48px;
+        height: 48px;
+        border: 1px solid $accent-color;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 6px;
+        cursor: pointer;
+
+        &__bar {
+            width: 24px;
+            height: 2px;
+            border-radius: 2px;
+            background-color: $accent-color;
+        }
+
+        &:hover {
+            background-color: #f5f5f5;
+        }
+    }
+
+    .btn {
+        display: none;
+    }
+
+    @media (min-width:1024px) {
+        &__toggler {
+            display: none;
+        }
+
+        .btn {
+            display: block;
+        }
+    }
+
+}
+
 .btn-white {
     background-color: #fff;
     color: $accent-color;
