--- a/styles/main.css
+++ b/styles/main.css
@@ -219,3 +219,93 @@ footer {
 .btn-white:hover {
   filter: brightness(0.9);
 }
+
+.hero__content {
+  padding: 0 clamp(24px, 100px, 10%);
+  padding-top: 140px;
+}
+.hero__text {
+  margin-bottom: 50px;
+}
+.hero__text h1 {
+  font-size: calc(1.5rem + 3vw);
+  font-weight: 600;
+  width: 12ch;
+  line-height: 1.5;
+  margin-bottom: 40px;
+}
+.hero__text p {
+  font-size: 18px;
+  max-width: 50ch;
+  line-height: 1.8;
+  color: #747474;
+}
+.hero__image {
+  width: 100%;
+  margin-top: 50px;
+}
+.hero__image img {
+  display: block;
+  margin: 0 auto;
+  width: clamp(300px, 100%, 500px);
+  height: auto;
+}
+.hero .desktop-img {
+  display: none;
+}
+@media (max-width: 768px) {
+  .hero .btn {
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1024px) {
+  .hero {
+    display: flex;
+    width: 100%;
+    gap: 60px;
+    height: clamp(700px, 100vh, 900px);
+  }
+  .hero__content {
+    width: 60%;
+    padding-top: 120px;
+    padding-left: 100px;
+  }
+  .hero__text {
+    margin-bottom: 50px;
+  }
+  .hero__text h1 {
+    font-size: calc(1rem + 3vw);
+    font-weight: 600;
+    width: 12ch;
+    line-height: 1.3;
+    margin-bottom: 30px;
+  }
+  .hero .mobile-img {
+    display: none;
+  }
+  .hero .desktop-img {
+    display: block;
+  }
+  .hero__image {
+    width: 40%;
+    margin: 0;
+  }
+  .hero__image img {
+    width: 100%;
+    height: auto;
+  }
+}
+@media (min-width: 1600px) {
+  .hero__text h1 {
+    font-size: 70px;
+  }
+  .hero__text p {
+    font-size: 24px;
+  }
+}
+@media (min-width: 500px) {
+  .hero .mobile-img {
+    border-radius: 50px;
+    box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
+  }
+}
