--- a/styles/main.scss
+++ b/styles/main.scss
@@ -241,3 +241,114 @@ footer {
         filter: brightness(0.9);
     }
 }
+
+.hero {
+    &__content {
+        padding: 0 clamp(24px, 100px, 10%);
+        padding-top: 140px;
+    }
+
+    &__text {
+        margin-bottom: 50px;
+
+        h1 {
+            font-size: calc(1.5rem + 3vw);
+            font-weight: 600;
+            width: 12ch;
+            line-height: 1.5;
+            margin-bottom: 40px;
+        }
+
+        p {
+            font-size: 18px;
+            max-width: 50ch;
+            line-height: 1.8;
+            color: $text-color-secondary;
+        }
+    }
+
+    &__image {
+        width: 100%;
+        margin-top: 50px;
+
+        img {
+            display: block;
+            margin: 0 auto;
+            width: clamp(300px, 100%, 500px);
+            height: auto;
+        }
+    }
+
+    .desktop-img {
+        display: none;
+    }
+
+    @media (max-width:768px) {
+        .btn {
+            margin: 0 auto;
+        }
+    }
+
+    @media (min-width:1024px) {
+        display: flex;
+        width: 100%;
+        gap: 60px;
+        height: clamp(700px, 100vh, 900px);
+
+        &__content {
+            width: 60%;
+            padding-top: 120px;
+            padding-left: 100px;
+        }
+
+        &__text {
+            margin-bottom: 50px;
+
+            h1 {
+                font-size: calc(1rem + 3vw);
+                font-weight: 600;
+                width: 12ch;
+                line-height: 1.3;
+                margin-bottom: 30px;
+            }
+        }
+
+        .mobile-img {
+            display: none;
+        }
+
+        .desktop-img {
+            display: block;
+        }
+
+        &__image {
+            width: 40%;
+            margin: 0;
+
+            img {
+                width: 100%;
+                height: auto;
+            }
+        }
+    }
+
+    @media (min-width:1600px) {
+        &__text {
+            h1 {
+                font-size: 70px;
+            }
+
+            p {
+                font-size: 24px;
+            }
+        }
+    }
+
+    @media (min-width:500px) {
+        .mobile-img {
+            border-radius: 50px;
+            box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
+        }
+    }
+
+}
