--- a/styles/main.scss
+++ b/styles/main.scss
@@ -352,3 +352,61 @@ footer {
     }
 
 }
+
+.features {
+    margin-top: 80px;
+    padding: 0 clamp(24px, 100px, 10%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+
+    @media (min-width:1024px) {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: stretch;
+    }
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+
+    &__image {
+        width: 100px;
+        height: 100px;
+        background-color: #eef3ff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50px;
+    }
+
+    &__info {
+        text-align: center;
+    }
+
+    &__title {
+        font-size: 24px;
+        font-weight: 600;
+        margin-bottom: 20px;
+    }
+
+    &__description {
+        color: $text-color-secondary;
+        max-width: 35ch;
+        line-height: 1.8;
+    }
+
+    @media (min-width:1024px) and (max-width:1320px) {
+        align-items: flex-start;
+    }
+
+    @media (min-width:1024px) {
+        &__info {
+            text-align: left;
+        }
+    }
+}
