--- a/styles/main.scss
+++ b/styles/main.scss
@@ -410,3 +410,69 @@ footer {
         }
     }
 }
+
+.showcard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+
+    &__image {
+        width: 100%;
+
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+
+    &__info {
+        padding: 0 24px;
+    }
+
+    &__title {
+        margin-bottom: 20px;
+    }
+
+    &__description {
+        color: $text-color-secondary;
+        max-width: 50ch;
+        line-height: 1.8;
+    }
+
+    @media (min-width:1024px) {
+        flex-direction: row;
+
+        &__image {
+            width: 50%;
+        }
+
+        &__info {
+            width: 50%;
+            padding-right: clamp(24px, 100px, 10%);
+        }
+
+        &__description {
+            max-width: 40ch;
+        }
+
+        .radius-right {
+            border-radius: 0 100px 100px 0;
+        }
+
+        .radius-left {
+            border-radius: 100px 0 0 100px;
+        }
+    }
+}
+
+.showcard--reverse {
+    @media (min-width:1024px) {
+        flex-direction: row-reverse;
+
+        .showcard__info {
+            padding-right: 0;
+            padding-left: clamp(24px, 100px, 10%);
+        }
+    }
+}
