--- a/styles/main.css
+++ b/styles/main.css
@@ -365,6 +365,20 @@ footer {
   }
 }
 
+.advantages {
+  margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 60px;
+}
+@media (min-width: 1024px) {
+  .advantages {
+    margin-top: 150px;
+    gap: 150px;
+  }
+}
+
 .showcard {
   display: flex;
   flex-direction: column;
