--- a/styles/main.scss
+++ b/styles/main.scss
@@ -410,7 +410,18 @@ footer {
         }
     }
 }
+.advantages{
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+    @media (min-width:1024px){
+        margin-top: 150px;
+        gap: 150px;
+    }
 
+}
 .showcard {
     display: flex;
     flex-direction: column;
