--- a/styles/main.scss
+++ b/styles/main.scss
@@ -410,18 +410,21 @@ footer {
         }
     }
 }
-.advantages{
+
+.advantages {
     margin-top: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 60px;
-    @media (min-width:1024px){
+
+    @media (min-width:1024px) {
         margin-top: 150px;
         gap: 150px;
     }
 
 }
+
 .showcard {
     display: flex;
     flex-direction: column;
@@ -484,6 +487,47 @@ footer {
         .showcard__info {
             padding-right: 0;
             padding-left: clamp(24px, 100px, 10%);
+        }
+    }
+}
+
+.download {
+    margin-top: 60px;
+    padding: 0 clamp(24px, 100px, 10%);
+
+    &__banner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+        background-image: url('../images/download-bg-img.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 50px;
+        border-radius: 50px;
+    }
+
+    &__text {
+        text-align: center;
+        color: white;
+    }
+
+    &__cta {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+    }
+
+    @media (min-width:1024px) {
+        margin-top: 150px;
+
+        &__banner {
+            padding: 100px;
+        }
+
+        &__cta {
+            flex-direction: row;
+            gap: 50px;
         }
     }
 }
